# Seat_Sales

./: README.md
Cargo-App/Cargo/: Cargo.toml
Cargo-App/Cargo/src/: client.rs  main.rs  server.rs
React-App/: package-lock.json
React-App/src/: App.tsx
React-App/src/Fetchs/: SeatReservation.css  SeatReservation.tsx
