[package]
name = "Cargo"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0-alpha.2"
warp = "0.3"        # Para el servidor HTTP
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # Para trabajar con JSON
tokio = { version = "1", features = ["full"] }  # Para ejecución asincrónica
actix-web = "4"
actix-cors = "0.6"